--- a/app/src/main/res/layout/fragment_admin_mail.xml
+++ b/app/src/main/res/layout/fragment_admin_mail.xml
@@ -7,99 +7,311 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Borrower Detail"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name:"
-        android:layout_marginTop="50dp"
-        android:textSize="18dp"
-        android:layout_marginLeft="20dp"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Borrower Detail"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textViewMName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="150dp"
-        android:textSize="18dp"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="50dp"
+                android:text="Name:"
+                android:textSize="18dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NRIC:"
-        android:textSize="18dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="20dp"/>
+            <TextView
+                android:id="@+id/textViewMName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="50dp"
+                android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/textViewMIC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="50dp"
+                android:text="NRIC:"
+                android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/textViewMSName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"/>
+            <TextView
+                android:id="@+id/textViewMIC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="260dp"
+                android:layout_marginTop="50dp"
+                android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/textViewMSIC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="80dp"
+                android:text="Phone No.:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMPhoneNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="80dp"
+                android:textSize="18dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="110dp"
+                android:text="Email Address:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMEmailAddr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="110dp"
+                android:textSize="18dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="140dp"
+                android:text="Monthly Income:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMMonthlyIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="140dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="170dp"
+                android:text="Monthly Expenses:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMMonthlyExpense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="170dp" />
 
 
-    <TextView
-        android:id="@+id/textViewMMonthlyIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:text="monthlyIncome"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="210dp"
+                android:text="Spouse Detail"
+                android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/textViewMMonthlyExpense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="240dp"
+                android:text="Name:"
+                android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/textViewMCarPlate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"/>
+            <TextView
+                android:id="@+id/textViewMSName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="240dp"
+                android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/textViewMCarModel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="210dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="240dp"
+                android:text="NRIC:"
+                android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/textViewMCarBrand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"/>
+            <TextView
+                android:id="@+id/textViewMSIC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="260dp"
+                android:layout_marginTop="240dp" />
 
-    <Button
-        android:id="@+id/btnApprove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:text="Approve"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="270dp"
+                android:text="Phone No.:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMSPhoneNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="270dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="300dp"
+                android:text="Net Income:"
+                android:textSize="18dp" />
+
+
+            <TextView
+                android:id="@+id/textViewMSNetIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="300dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="340dp"
+                android:text="Car Detail"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="370dp"
+                android:text="Car Brand:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMCarBrand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="110dp"
+                android:layout_marginTop="370dp"
+                android:textSize="18dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="370dp"
+                android:text="Car Model:"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMCarModel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="370dp"
+                android:layout_marginLeft="300dp"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:text="Car Plate No.:"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="400dp"/>
+
+            <TextView
+                android:id="@+id/textViewMCarPlate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="400dp"
+                android:layout_marginLeft="200dp"
+                android:textSize="18dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Net Car Price (RM):"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="430dp"
+                android:textSize="18dp"
+                />
+
+            <TextView
+                android:id="@+id/textViewMNetCarPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="430dp"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Downpayment (RM):"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="460dp"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:id="@+id/textViewMDownpayment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="460dp"
+                android:textSize="18dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Loan Applied (RM):"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="490dp"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewMLoanApplied"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="490dp"
+                android:textSize="18dp"/>
+
+            <Button
+                android:id="@+id/btnReject"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="540dp"
+                android:layout_marginLeft="80dp"
+                android:padding="10dp"
+                android:textSize="20dp"
+                android:background="@color/trans_light_blue1"
+                android:text="Reject" />
+
+            <Button
+                android:id="@+id/btnApprove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="540dp"
+                android:layout_marginLeft="220dp"
+                android:padding="10dp"
+                android:textSize="20dp"
+                android:background="@color/trans_light_blue1"
+                android:text="Approve" />
+        </FrameLayout>
     </ScrollView>
 </FrameLayout>
