--- a/app/src/main/res/layout/fragment_borrower_financial.xml
+++ b/app/src/main/res/layout/fragment_borrower_financial.xml
@@ -154,7 +154,7 @@
          />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/editTextOtherExpenses"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:ems="10"
