--- a/app/src/main/res/layout/fragment_spouse.xml
+++ b/app/src/main/res/layout/fragment_spouse.xml
@@ -26,11 +26,42 @@
         />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView2a"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="136dp"
+        android:text="Relationship: "
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        />
+
+    <RadioButton
+        android:id="@+id/radioButtonSSpouse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="190dp"
+        android:layout_marginTop="132dp"
+        android:textSize="18dp"
+        android:text="Spouse"
+        />
+
+    <RadioButton
+        android:id="@+id/radioButtonSGuarantor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="132dp"
+        android:textSize="18dp"
+        android:text="Co-guarantor"
+        />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="186dp"
         android:textSize="18dp"
         android:text="NRIC: "
         android:textColor="@color/black"
@@ -61,7 +92,7 @@
         android:id="@+id/radioButtonSFemale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="270dp"
+        android:layout_marginLeft="290dp"
         android:layout_marginTop="82dp"
         android:textSize="18dp"
         android:text="Female"
@@ -71,7 +102,7 @@
         android:id="@+id/editTextSIC"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="182dp"
         android:ems="10"
         android:hint="   881010025126"
         android:layout_marginLeft="190dp"
@@ -84,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="186dp"
+        android:layout_marginTop="236dp"
         android:textColor="@color/black"
         android:text="Age: "
         android:textSize="18dp"
@@ -96,7 +127,7 @@
         android:layout_height="30dp"
         android:ems="10"
         android:inputType="number"
-        android:layout_marginTop="182dp"
+        android:layout_marginTop="232dp"
         android:layout_marginLeft="190dp"
         android:background="@drawable/textinput"
         />
@@ -106,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="286dp"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:text="Address: "
@@ -118,7 +149,7 @@
         android:layout_height="30dp"
         android:ems="10"
         android:layout_marginLeft="190dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="282dp"
         android:background="@drawable/textinput"
         android:inputType="textPostalAddress"
         android:textColor="@color/black"
@@ -129,7 +160,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="286dp"
+        android:layout_marginTop="336dp"
         android:text="Phone No.: "
         android:textColor="@color/black"
         android:textSize="18dp"
@@ -139,7 +170,7 @@
         android:id="@+id/editTextSPhoneNum"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginTop="282dp"
+        android:layout_marginTop="332dp"
         android:ems="10"
         android:inputType="phone"
         android:layout_marginLeft="190dp"
@@ -151,7 +182,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="336dp"
+        android:layout_marginTop="386dp"
         android:layout_marginLeft="20dp"
         android:text="Email Address: "
         android:textColor="@color/black"
@@ -163,30 +194,14 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:ems="10"
-        android:layout_marginTop="332dp"
+        android:layout_marginTop="382dp"
         android:layout_marginLeft="190dp"
         android:background="@drawable/textinput"
         android:inputType="textEmailAddress"
         />
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="386dp"
-        android:text="Nationality: "
-        android:textSize="18dp"
-        android:textColor="@color/black"
-        />
 
-    <Spinner
-        android:id="@+id/spinnerSNationality"
-        android:layout_width="214dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="190dp"
-        android:layout_marginTop="382dp"
-        />
+
 
     <TextView
         android:layout_width="wrap_content"
