--- a/app/src/main/res/layout/fragment_borrower_detail.xml
+++ b/app/src/main/res/layout/fragment_borrower_detail.xml
@@ -49,7 +49,7 @@
         />
 
     <RadioButton
-        android:id="@+id/radioButtonMale"
+        android:id="@+id/radioButtonBMale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="190dp"
@@ -59,7 +59,7 @@
         />
 
     <RadioButton
-        android:id="@+id/radioButtonFemale"
+        android:id="@+id/radioButtonBFemale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="270dp"
@@ -114,7 +114,7 @@
         />
 
     <EditText
-        android:id="@+id/editTextAddress"
+        android:id="@+id/editTextBAddress"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:ems="10"
@@ -137,7 +137,7 @@
          />
 
     <EditText
-        android:id="@+id/editTextPhoneNum"
+        android:id="@+id/editTextBPhoneNum"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_marginTop="282dp"
@@ -160,7 +160,7 @@
        />
 
     <EditText
-        android:id="@+id/editTextEmail"
+        android:id="@+id/editTextBEmail"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:ems="10"
