--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,22 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp">
 
- <RelativeLayout
-     android:layout_width="match_parent"
-     android:layout_height="match_parent">
-
-    <com.github.mikephil.charting.charts.BarChart
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:id="@+id/barchart"
-        android:gravity="center_vertical"
-        android:padding="10dp">
-    </com.github.mikephil.charting.charts.BarChart>
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+
+        <TextView
+            android:id="@+id/textViewMonth"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textViewYear"
+            android:layout_alignBottom="@+id/textViewYear"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="123dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/month"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/textViewYear"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/rightButton"
+            android:layout_toRightOf="@+id/textViewMonth"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@integer/year"/>
+
+        <ImageButton
+            android:id="@+id/leftButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="70dp"
+            android:layout_marginStart="70dp"
+            app:srcCompat="@android:drawable/ic_media_rew" />
+
+        <ImageButton
+            android:id="@+id/rightButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/textViewYear"
+            android:layout_toRightOf="@+id/textViewYear"
+            app:srcCompat="@android:drawable/ic_media_ff" />
+
+        <ListView
+            android:id="@+id/listReport"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textViewYear"
+            android:layout_marginTop="58dp" />
+
+        <TextView
+            android:id="@+id/textTotal"
+            android:layout_width="160dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/textViewYear"
+            android:layout_marginTop="14dp"
+            android:layout_marginLeft="80dp"
+            android:text="TOTAL SALES:" />
+
+        <ImageButton
+            android:id="@+id/imgChange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/listReport"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            app:srcCompat="@android:drawable/ic_menu_agenda" />
+
+
+    </RelativeLayout>
 
 </FrameLayout>
